--- a/index.html
+++ b/index.html
@@ -8,6 +8,49 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2021</h2>
 
+<h3 align="center">1. Lauf um den Jahrespokal des EMC am 20. Juni 2021</h3>
+<p align="justify">
+  Nach den rückläufigen Corona-Inzidenzwerten konnten wir unsere diesjährige
+  Rennsaison verspätet mit dem 1. Lauf am Sonntag, den 20. Juni, starten. Leider
+  konnten viele Stammfahrer aus unterschiedlichsten Gründen nicht am Rennen
+  teilnehmen und somit war das Starterfeld sehr überschaubar. In der Goggo-Klasse
+  wie auch in der Kartklasse gingen jeweils nur 2 Fahrer an den Start. In beiden
+  Klassen wurde daher nur ein Wertungslauf durchgeführt.
+
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Andreas Punsmann einen sicheren Sieg einfahren.
+  Janek Horn brachte erstmals seinen neu aufgebauten Goggo an den Start und
+  auch sicher ins Ziel.
+</p>
+<p align="justify">
+  In der Kartklasse war Benjamin Schneider siegreich vor dem Gastfahrer Pascal
+  Ritter. Pascal fuhr erstmals auf unserer Bahn und war offensichtlich begeistert,
+  er wird mit seinem Team sicher noch öfter bei uns dabei sein.
+
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2021.06.20_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2021.06.20_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Andreas Punsmann</li>
+   		<li>2. Janek Horn</li>
+   		<li></li>
+   		<li></li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Pascal Ritter</li>
+      <li></li>
+      <li></li>
+   </ul>
+</div>
 <p align="center"><font color="#FF0000"><b>
 Wie auch schon im letzten Jahr konnten wir durch die Corona Pandemie unsere
 diesjährige Rennsaison bisher leider nicht starten. Die traditionellen Rennen an
