--- a/termine.html
+++ b/termine.html
@@ -53,17 +53,17 @@ description:
       <tr>
         <td>August</td>
         <td>5. August</td>
-        <td>noch nicht bekannt</td>
+        <td>22.8. oder 29.8.</td>
       </tr>
       <tr>
         <td>September</td>
         <td>2. September</td>
-        <td>noch nicht bekannt</td>
+        <td>12.9. oder 19.9.</td>
       </tr>
       <tr>
         <td>Oktober</td>
         <td>7. Oktober</td>
-        <td>noch nicht bekannt</td>
+        <td>10.10. oder 17.10.</td>
       </tr>
       <tr>
         <td>November</td>
