--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2021</h2>
 
+<h3 align="center">2. Lauf um den Jahrespokal des EMC am 04. Juli 2021</h3>
+<p align="justify">
+  Am Sonntag, den 04. Juli, haben wir uns zum 2. Lauf auf unserer Bahn getroffen.
+  Sowohl in der Goggo-Klasse wie auch in der Kart-Klasse hatten sich erfreulich
+  viele Fahrer eingefunden. Trotz der Unwetterwarnungen haben wir bei strömendem
+  Regen versucht, das Training durchzuführen und auch ein Rennen zu starten. Wir
+  mussten aber schnell erkennen, dass unsere Fahrzeuge den Wassermassen nicht
+  standhalten konnten, Wasser drang in die Vergaser ein und die Ausfälle fast
+  aller Fahrzeuge waren nicht zu vermeiden.
+</p>
+<p align="justify">
+  Obwohl wir keine Wertungsläufe durchführen konnten, haben die Fahrer immer
+  wieder versucht, ihre Fahrzeuge startklar zu machen und einige "nasse" Runden
+  zu drehen. Offensichtlich hat es allen Spaß gemacht, unter diesen widrigen
+  Wetterbedingungen das Fahrverhalten im Grenzbereich auszuloten. Die folgenden
+  Bilder zeigen daher keine Siegerfotos, vermitteln aber vielleicht einen Eindruck
+  von den Verhältnissen auf der Bahn.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2021.07.04_goggo.jpg" alt="Goggo" />
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2021.07.04_kart.jpg" alt="Kart" />
+      </figure>
+</figure>
+
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 20. Juni 2021</h3>
 <p align="justify">
   Nach den rückläufigen Corona-Inzidenzwerten konnten wir unsere diesjährige
@@ -16,7 +43,6 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   teilnehmen und somit war das Starterfeld sehr überschaubar. In der Goggo-Klasse
   wie auch in der Kartklasse gingen jeweils nur 2 Fahrer an den Start. In beiden
   Klassen wurde daher nur ein Wertungslauf durchgeführt.
-
 </p>
 <p align="justify">
   In der Goggo-Klasse konnte Andreas Punsmann einen sicheren Sieg einfahren.
@@ -27,7 +53,6 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   In der Kartklasse war Benjamin Schneider siegreich vor dem Gastfahrer Pascal
   Ritter. Pascal fuhr erstmals auf unserer Bahn und war offensichtlich begeistert,
   er wird mit seinem Team sicher noch öfter bei uns dabei sein.
-
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
