--- a/index.html
+++ b/index.html
@@ -8,6 +8,53 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2021</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 22. August 2021</h3>
+<p align="justify">
+  Am Sonntag, den 22. August, haben wir uns zum 3. Lauf um den EMC Jahrespokal
+  auf unserer Bahn getroffen. In der Goggo-Klasse waren leider nur 2 Fahrer
+  angetreten, um so erfreulicher war die Beteiligung in der Kartklasse mit 6
+  Fahrzeugen. Bei trockenem Wetter konnten wir in beiden Klassen zwei
+  Wertungsläufe durchführen.
+</p>
+<p align="justify">
+  In der Goggo-Klasse lieferten sich Andreas Punsmann und Janek Horn ein Rennen
+  auf gleichem Niveau. Den ersten Lauf konnte Andreas Punsman für sich
+  entscheiden, beim zweiten Lauf hatte er technische Probleme mit seinem Fahrzeug
+  und Janek Horn konnte den Sieg einfahren.
+
+</p>
+<p align="justify">
+  In der Kartklasse lagen Benjamin Schneider und Victor Roh sehr eng beieinander
+  und lieferten sich ein spannendes Rennen. Im ersten Lauf siegte Benjamin, beim
+  2. Lauf konnte er leider nicht mehr starten, da in der Einführungsrunde die
+  Antriebskette gerissen war. Victor siegte im zweiten Lauf, aber auch die
+  Gastfahrer Jerome Kura und Tino Treinen auf den weiteren Plätzen legten
+  beachtliche Zeiten vor.
+
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2021.08.22_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2021.08.22_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Janek Horn</li>
+   		<li>2. Andreas Punsmann</li>
+   		<li>- </li>
+   		<li></li>
+   		<li>1. Victor Roh</li>
+      <li>2. Tino Treinen</li>
+      <li>3. Jerome Kura</li>
+      <li> </li>
+   </ul>
+</div>
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 04. Juli 2021</h3>
 <p align="justify">
   Am Sonntag, den 04. Juli, haben wir uns zum 2. Lauf auf unserer Bahn getroffen.
