--- a/termine.html
+++ b/termine.html
@@ -53,7 +53,7 @@ description:
       <tr>
         <td>August</td>
         <td>5. August</td>
-        <td>22.8. oder 29.8.</td>
+        <td>22. August 3. Rennen</td>
       </tr>
       <tr>
         <td>September</td>
