--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 19. September 2021</h3>
 <p align="justify">
   Am Sonntag, den 19. September, haben wir den 4. Lauf um den EMC Jahrespokal
-  auf unserer Bahn durchgefühet. In der Goggo-Klasse waren 5 Fahrer angetreten,
+  auf unserer Bahn durchgeführt. In der Goggo-Klasse waren 5 Fahrer angetreten,
   in der Kartklasse waren 9 Karts an die Bahn gebracht worden, davon konnten
   wegen technischer Probleme nur 6 Fahrzeuge an den Start gehen. Bei guten
   Witterungsverhältnissen konnten erfreulich viele Zuschauer spannende Rennen
