--- a/termine.html
+++ b/termine.html
@@ -58,12 +58,12 @@ description:
       <tr>
         <td>September</td>
         <td>2. September</td>
-        <td>12.9. oder 19.9.</td>
+        <td>19. September</td>
       </tr>
       <tr>
         <td>Oktober</td>
         <td>7. Oktober</td>
-        <td>10.10. oder 17.10.</td>
+        <td>10. Oktober</td>
       </tr>
       <tr>
         <td>November</td>
