--- a/termine.html
+++ b/termine.html
@@ -58,12 +58,12 @@ description:
       <tr>
         <td>September</td>
         <td>2. September</td>
-        <td>19. September</td>
+        <td>19. September 4. Rennen</td>
       </tr>
       <tr>
         <td>Oktober</td>
         <td>7. Oktober</td>
-        <td>10. Oktober</td>
+        <td>10. Oktober 5. Rennen</td>
       </tr>
       <tr>
         <td>November</td>
