--- a/index.html
+++ b/index.html
@@ -8,6 +8,64 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2021</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 10. Oktober 2021</h3>
+<p align="justify">
+  Am Sonntag, den 10. Oktober, haben wir den 5. Lauf um den EMC Jahrespokal
+  auf unserer Bahn durchgeführt. In der Goggo-Klasse wie auch in der Kart-Klasse
+  waren jeweils 5 Fahrer angetreten. Bei guten spätsommerlichen
+  Witterungsverhältnissen hatten auch viele Zuschauer den Weg zur Bahn gefunden
+  und konnten spannende Rennen verfolgen.
+
+</p>
+<p align="justify">
+  In der Goggo-Klasse war auch Matthias Schulte-Bocholt wieder dabei und fuhr
+  wie gewohnt zwei Siege ein. Auf den wietern Plätzen landeten Frank Langenhorst,
+  Christoph Markfort und Hubert Volks sehr eng beieinander, die Rundenzeiten
+  lagen nur wenige hundertstel auseinander.
+</p>
+
+<p align="justify">
+  In der Kartklasse siegte Benjamin Schneider in beiden Läufen. Victor Roh und
+  Gastfahrer Jerome Kura kämpten um Platz 2 und 3, jeder konnte einen Lauf für
+  sich entscheiden. Tino Treinen und Dominik Schneider belegten die weiteren
+  Plätze.
+</p>
+
+<p align="justify">
+  Nach dem letzten Rennen in diesem Jahr stehen die Jahrssieger 2020 fest. Wir
+  gratulieren zum Jahrespokal:
+</p>
+<p align="center">
+  Goggo-Klasse:	Andreas Punsmann
+  <br>
+  Kart-Klasse:	Benjamin Schneider
+</p>
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2021.10.10_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2021.10.10_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+      <li>2. Frank Langenhorst</li>
+      <li>3. Christoph Markfort</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li></li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Jerome Kura</li>
+      <li>4. Tino Treinen</li>
+      <li> </li>
+   </ul>
+</div>
+
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 19. September 2021</h3>
 <p align="justify">
   Am Sonntag, den 19. September, haben wir den 4. Lauf um den EMC Jahrespokal
