--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 
 <p align="justify">
   In der Kartklasse siegte Benjamin Schneider in beiden Läufen. Victor Roh und
-  Gastfahrer Jerome Kura kämpten um Platz 2 und 3, jeder konnte einen Lauf für
+  Gastfahrer Jerome Kura kämpften um Platz 2 und 3, jeder konnte einen Lauf für
   sich entscheiden. Tino Treinen und Dominik Schneider belegten die weiteren
   Plätze.
 </p>
