--- a/ergebnisse.html
+++ b/ergebnisse.html
@@ -20,6 +20,11 @@ description:
   </thead>
   <tbody>
     <tr>
+      <td>2021</td>
+      <td>Andreas Punsmann</td>
+      <td>Benjamin Schneider</td>
+    </tr>
+    <tr>
       <td>2020</td>
       <td>Matthias Schulte-Bocholt</td>
       <td>Benjamin Schneider</td>
