--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,8 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_12.21_1.jpg" alt="Protokoll 12.2021_1">
+<img src="img/intern/emc_vers_12.21_2.jpg" alt="Protokoll 12.2021_2">
 <img src="img/intern/emc_vers_11.21.jpg" alt="Protokoll 11.2021">
 <img src="img/intern/emc_vers_10.21.jpg" alt="Protokoll 10.2021">
 <img src="img/intern/emc_vers_09.21.jpg" alt="Protokoll 09.2021">
