--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@ title: Willkommen beim Erler Motor Club
 description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 ---
 
+<!--                         Das Jahr 2022                                -->
+<!-------------------------------------------------------------------------->
+<h2 align="center">Das Jahr 2022</h2>
+
+<p align="center"><font color="#FF0000"><b>
+Die erste Versammlung 2022 wurde unter Einhaltung der Corona-Richtlinien im
+kleinen Kreis durch geführt. In diesem Jahr besteht unser Verein 50 Jahre,
+dieses Jubiläum wollen wir im August auf unserer Kartbahn feiern. Erste
+Vorbereitungen hierzu wurden besprochen, wieterhin wurden die (Vorläufigen)
+Termine für des Jahr abgestimmt (siehe hierzu Terminseite).
+</b></font></p>
+
 <!--                         Das Jahr 2021                                -->
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2021</h2>
@@ -15,7 +27,6 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   waren jeweils 5 Fahrer angetreten. Bei guten spätsommerlichen
   Witterungsverhältnissen hatten auch viele Zuschauer den Weg zur Bahn gefunden
   und konnten spannende Rennen verfolgen.
-
 </p>
 <p align="justify">
   In der Goggo-Klasse war auch Matthias Schulte-Bocholt wieder dabei und fuhr
