--- a/termine.html
+++ b/termine.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Termine 2021
+title: Termine 2022
 description:
 ---
 
@@ -22,48 +22,49 @@ description:
       </tr>
       <tr>
         <td>Februar</td>
-        <td>ausgefallen wegen Corona</td>
+        <td>3. Februar</td>
         <td>-</td>
       </tr>
       <tr>
         <td>März</td>
-        <td>ausgefallen wegen Corona</td>
+        <td>3. März</td>
         <td>-</td>
       </tr>
       <tr>
         <td>April</td>
-        <td>ausgefallen wegen Corona</td>
-        <td>Ostermontag ausgefallen</td>
+        <td>7. April</td>
+        <td>18. April 1. Rennen Ostermontag</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>ausgefallen wegen Corona</td>
-        <td>Pfingstmontag ausgefallen</td>
+        <td>5. Mai</td>
+        <td>15. Mai 2. Rennen</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>10. Juni</td>
-        <td>20. Juni 1.Rennen</td>
+        <td>2. Juni</td>
+        <td>6. Juni 3.Rennen Pfingstmontag</td>
       </tr>
       <tr>
         <td>Juli</td>
-        <td>1. Juli</td>
-        <td>4. Juli 2. Rennen</td>
+        <td>7. Juli</td>
+        <td></td>
       </tr>
       <tr>
         <td>August</td>
-        <td>5. August</td>
-        <td>22. August 3. Rennen</td>
+        <td>4. August</td>
+        <td>13/14. August 50-Jahrfeier<br>
+            28. August 4. Rennen</td>
       </tr>
       <tr>
         <td>September</td>
-        <td>2. September</td>
-        <td>19. September 4. Rennen</td>
+        <td>1. September</td>
+        <td>11. September 5. Rennen</td>
       </tr>
       <tr>
         <td>Oktober</td>
-        <td>7. Oktober</td>
-        <td>10. Oktober 5. Rennen</td>
+        <td>6. Oktober</td>
+        <td></td>
       </tr>
       <tr>
         <td>November</td>
@@ -72,7 +73,7 @@ description:
       </tr>
       <tr>
         <td>Dezember</td>
-        <td>2. Dezember (Jahreshauptversammlung)<br>
+        <td>1. Dezember (Jahreshauptversammlung)<br>
             12. Dezember (Weihnachtsfeier)</td>
         <td>-</td>
       </tr>
