--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_02.22.jpg" alt="Protokoll 02.2022">
 <img src="img/intern/emc_vers_12.21_1.jpg" alt="Protokoll 12.2021_1">
 <img src="img/intern/emc_vers_12.21_2.jpg" alt="Protokoll 12.2021_2">
 <img src="img/intern/emc_vers_11.21.jpg" alt="Protokoll 11.2021">
