--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 Die erste Versammlung 2022 wurde unter Einhaltung der Corona-Richtlinien im
 kleinen Kreis durch geführt. In diesem Jahr besteht unser Verein 50 Jahre,
 dieses Jubiläum wollen wir im August auf unserer Kartbahn feiern. Erste
-Vorbereitungen hierzu wurden besprochen, wieterhin wurden die (Vorläufigen)
+Vorbereitungen hierzu wurden besprochen, wieterhin wurden die (vorläufigen)
 Termine für des Jahr abgestimmt (siehe hierzu Terminseite).
 </b></font></p>
 
