--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2022</h2>
 
+<h3 align="center">1. Lauf um den Jahrespokal des EMC am 18. April 2022</h3>
+<p align="justify">
+  Die Rennsaison des EMC konnte in diesem Jahr planmäßig mit dem 1. Lauf am
+  Ostermontag gestartet werden. Bei bestem Sonnigen Wetter hatten zahlreiche
+  Besucher den Weg zu unserer Bahn gefunden und konnten die spannenden Rennen
+  mit erfreulich vielen Fahrzeugen verfolgen. In der Goggo-Klasse gingen 9 Fahrer
+  und in der Kartklasse 7 Fahrer an den Start.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Matthias Schulte-Bocholt 2 Siege einfahren. Die
+  weiteren Plätze belegten Hubert Volks und Jonas Schulte-Greving.
+</p>
+<p align="justify">
+  In der Kartklasse war Gastfahrer Jerome Kura in beiden Läufen erfolgreich, den
+  2. Platz belegte Victor Roh vor Gastfahrer Tino Treinen. Der Vorjahressieger
+  Benjamin Schneider konnte wegen einer Corona-Ifektion leider nicht dabei sein.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2022.04.18_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2022.04.18_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Hubert Volks</li>
+   		<li>3. Jonas Schulte-Greving</li>
+   		<li>4. Christoph Markfort</li>
+   		<li>1. Jerome Kura</li>
+      <li>2. Victor Roh</li>
+      <li>3. Tino Treinen</li>
+      <li>4. Horst Primas</li>
+   </ul>
+</div>
+
 <p align="center"><font color="#FF0000"><b>
 Die erste Versammlung 2022 wurde unter Einhaltung der Corona-Richtlinien im
 kleinen Kreis durch geführt. In diesem Jahr besteht unser Verein 50 Jahre,
