--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 18. April 2022</h3>
 <p align="justify">
   Die Rennsaison des EMC konnte in diesem Jahr planmäßig mit dem 1. Lauf am
-  Ostermontag gestartet werden. Bei bestem Sonnigen Wetter hatten zahlreiche
+  Ostermontag gestartet werden. Bei bestem Sonnenwetter hatten zahlreiche
   Besucher den Weg zu unserer Bahn gefunden und konnten die spannenden Rennen
   mit erfreulich vielen Fahrzeugen verfolgen. In der Goggo-Klasse gingen 9 Fahrer
   und in der Kartklasse 7 Fahrer an den Start.
@@ -23,7 +23,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <p align="justify">
   In der Kartklasse war Gastfahrer Jerome Kura in beiden Läufen erfolgreich, den
   2. Platz belegte Victor Roh vor Gastfahrer Tino Treinen. Der Vorjahressieger
-  Benjamin Schneider konnte wegen einer Corona-Ifektion leider nicht dabei sein.
+  Benjamin Schneider konnte wegen einer Corona-Infektion leider nicht dabei sein.
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
