--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2022</h2>
 
+<h3 align="center">2. Lauf um den Jahrespokal des EMC am 15. Mai 2022</h3>
+<p align="justify">
+  Bei bestem Sommerwetter haben wir uns zum 2. Renntag auf unserer Bahn getroffen.
+  In der Goggo-Klasse gingen ebenso wie in der Kartklasse jeweils 5 Fahrer an
+  den Start.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Matthias Schulte-Bocholt wie immer 2 Siege einfahren.
+  Die weiteren Plätze belegten Christoph Markfort, Frank Langenhorst und Tobias
+  Hegemann.
+</p>
+<p align="justify">
+  In der Kartklasse meldete sich Benjamin Schneider mit Rundenbestzeit
+  eindrucksvoll zurück. Beide Polepositions gingen beim Start durch den Vorteil
+  der 390 ccm Motoren der Gastfhrer aber verloren, jedoch konnte Benjamin die Führung
+  durch gezielte Überholmanöver zurückerobern. Beim ersten Lauf war er siegreich,
+  beim 2. Lauf schied er in Führung liegend kurz vor Rennende mit einem kapitalen
+  Motorschaden aus. Victor Roh musste nach dem 1.Lauf ebenso wegen Motorschaden
+  aufgeben, Horst Primas konnte nach einem Schaden an der Vorderachse auch nicht
+  mehr am 2. Lauf teilnehmen. Tagessieger war Jerome Kura vor Tino Treinen und
+  Benjamin Schneider.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2022.05.15_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2022.05.15_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Chistoph Markfort</li>
+   		<li>3. Frank Langenhorst</li>
+   		<li>4. Tobias Hegemann</li>
+   		<li>1. Jerome Kura</li>
+      <li>2. Tino Treinen</li>
+      <li>3. Benjamin Schneider</li>
+      <li></li>
+   </ul>
+</div>
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 18. April 2022</h3>
 <p align="justify">
   Die Rennsaison des EMC konnte in diesem Jahr planmäßig mit dem 1. Lauf am
