--- a/termine.html
+++ b/termine.html
@@ -53,13 +53,13 @@ description:
       <tr>
         <td>August</td>
         <td>4. August</td>
-        <td>13/14. August 50-Jahrfeier<br>
-            28. August 4. Rennen</td>
+        <td>28. August 4. Rennen</td>
       </tr>
       <tr>
         <td>September</td>
         <td>1. September</td>
-        <td>11. September 5. Rennen</td>
+        <td>10. September 50-Jahrfeier<br>
+            18. September 5. Rennen</td>
       </tr>
       <tr>
         <td>Oktober</td>
