--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2022</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 6. Juni 2022</h3>
+<p align="justify">
+  Der 3. Renntag wurde traditionell am Pfingstmontag auf unserer Bahn durchgeführt.
+  Bei trockenem Wetter gingen in der Goggo-Klasse 6 Fahrer und in der Kartklasse
+  5 Fahrer an den Start.
+</p>
+<p align="justify">
+  In der Goggo-Klasse war Matthias Schulte-Bocholt wieder in beiden Läufen
+  siegreich. Den 2. Platz belegte im 1. Lauf Hubert Volks, im 2. Lauf war es
+  Christoph Markfort. Als Tagessieger belegten Hubert Volks Platz 3 und Andreas
+  Punsmann Platz 4.
+</p>
+<p align="justify">
+  In der Kartklasse erreichte Benjamin Schneider mit neuem Motor Rundenbestzeit,
+  konnte dann aber wegen Einstellungsproblemen am Motor das Rennen nicht beenden.
+  Im ersten Lauf siegte Victor Roh vor Tino Treinen. Aus dem 2. Lauf gingen als
+  Tagessieger Jerome Kura vor Timo Treinen, Mario Primas und Victor Roh hervor.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2022.06.06_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2022.06.06_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Chistoph Markfort</li>
+   		<li>3. Hubert Volks</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Jerome Kura</li>
+      <li>2. Tino Treinen</li>
+      <li>3. Mario Primas</li>
+      <li>4. Victor Roh</li>
+   </ul>
+</div>
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 15. Mai 2022</h3>
 <p align="justify">
   Bei bestem Sommerwetter haben wir uns zum 2. Renntag auf unserer Bahn getroffen.
@@ -52,6 +93,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
       <li></li>
    </ul>
 </div>
+
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 18. April 2022</h3>
 <p align="justify">
   Die Rennsaison des EMC konnte in diesem Jahr planmäßig mit dem 1. Lauf am
