--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_08.22.jpg" alt="Protokoll 08.2022">
 <img src="img/intern/emc_vers_07.22.jpg" alt="Protokoll 07.2022">
 <img src="img/intern/emc_vers_06.22.jpg" alt="Protokoll 06.2022">
 <img src="img/intern/emc_vers_05.22.jpg" alt="Protokoll 05.2022">
