--- a/index.html
+++ b/index.html
@@ -8,6 +8,53 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2022</h2>
 
+<h3 align="center">4. Lauf um den Jahrespokal des EMC am 28. August 2022</h3>
+<p align="justify">
+  Der 4. Renntag wurde bei trockenem Wetter auf unserer Bahn durchgeführt.
+  In der Goggo-Klasse gingen 7 Fahrer und in der Kartklasse 4 Fahrer an den Start.
+</p>
+<p align="justify">
+  Das 1. Rennen in der Goggo-Klasse musste nach einem Unfall in der 15. Runde
+  abgebrochen werden. Zwischen Thomas Gerigk und Tobias Hegemann kam es im
+  Bereich Start/Ziel zu einer Berührung. Thomas stieg mit seinem Fahrzeug über
+  das Hinterrad von Tobias auf und landete auf dem Fahrzeug von Tobias. Der
+  Unfall sah spektakulär aus, durch das schnelle Eingreifen der Streckenposten
+  konnte die Situation aber umgehend aufgelöst werden. Dank Überrollbügel bei
+  den Goggos wurden die Fahrer nicht veletzt und kamen mit dem Schrecken davon.
+  Beide Läufe wurden gewertet, Matthias Schulte-Bocholt siegte zweimal vor
+  Christoph Markfort. Durch den Ausfall von Hubert Volks im 1. Lauf belegte
+  Andreas Punsmann den 3. Platz, im 2. Lauf fuhr Hubert Volks wieder auf diese
+  Position. Vierter bei den Tagessiegern war Reinhold Markfort.
+</p>
+<p align="justify">
+  In der Kartklasse fuhr Benjamin Schneider auf die Pole Position, schied aber
+  in beiden Läufen in Führung liegend mit Problemen am Ventiltrieb frühzeitig aus.
+  Victor Roh war in beiden Läufen siegreich, auf dem 2. Platz lag Tino Treinen,
+  musste diesen aber durch einen Ausfall im 2. Lauf an Dominik Schneider abgeben.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2022.08.28_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2022.08.28_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Chistoph Markfort</li>
+   		<li>3. Hubert Volks</li>
+   		<li>4. Reinhold Markfort</li>
+   		<li>1. Victor Roh</li>
+      <li>2. Dominik Schneider</li>
+      <li>3. Tino Treinen</li>
+      <li>4. Benjamin Schneider</li>
+   </ul>
+</div>
+
 <h3 align="center">3. Lauf um den Jahrespokal des EMC am 6. Juni 2022</h3>
 <p align="justify">
   Der 3. Renntag wurde traditionell am Pfingstmontag auf unserer Bahn durchgeführt.
