--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2022</h2>
 
+<img src="img/rennen/2022.09.02_einladung 50.jpg" alt="Einladung">
+
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 28. August 2022</h3>
 <p align="justify">
   Der 4. Renntag wurde bei trockenem Wetter auf unserer Bahn durchgeführt.
