--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2022</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 18. September 2022</h3>
+<p align="justify">
+  Der 5. Renntag wurde begleitet von Dauerregen. Entsprechend schlecht waren die
+  Streckenverhältnisse und die Läufe wurden zur Rutschpartie. In der Goggo-Klasse
+  gingen 7 Fahrer und in der Kartklasse 3 Fahrer an den Start.
+</p>
+<p align="justify">
+  In der Goggo-Klasse siegte Christoph Markfort in beiden Läufen. Die weiteren
+  Plätze für den Tagessieg belegten Hubert Volks,Frank Langenhorst und Andreas
+  Punsmann.
+</p>
+<p align="justify">
+  In der Kartklasse wurde wetterbedingt nur ein Lauf durchgeführt, Benjamin
+  Schneider siegte vor Victor Roh und Horst Primas.
+</p>
+<p align="justify">
+  Eine Siegerehrung auf der Bahn fand nicht statt, die Pokale werden bei der
+  nächsten Versammlung übergeben. Schon vor diesem letzen Renntag standen die
+  Jahressieger fest. Wir gratulieren zum Jahrespokal:
+</p>
+<p align="center">
+  Goggo-Klasse:	Matthias Schulte-Bocholt
+  <br>
+  Kart-Klasse:	Victor Roh
+</p>
+
 <img src="img/rennen/2022.09.01_einladung 50.jpg" alt="Einladung">
 
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 28. August 2022</h3>
