--- a/termine.html
+++ b/termine.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Termine 2022
+title: Termine 2023
 description:
 ---
 
@@ -22,7 +22,7 @@ description:
       </tr>
       <tr>
         <td>Februar</td>
-        <td>3. Februar</td>
+        <td>2. Februar</td>
         <td>-</td>
       </tr>
       <tr>
@@ -32,49 +32,49 @@ description:
       </tr>
       <tr>
         <td>April</td>
-        <td>7. April</td>
-        <td>18. April 1. Rennen Ostermontag</td>
+        <td>5. April</td>
+        <td>10. April 1. Rennen Ostermontag</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>5. Mai</td>
-        <td>15. Mai 2. Rennen</td>
+        <td>4. Mai</td>
+        <td>7. Mai 2. Rennen<br>
+        <td>20. Mai 3. Rennen Pfingstmontag</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>2. Juni</td>
-        <td>6. Juni 3. Rennen Pfingstmontag</td>
+        <td>1. Juni</td>
+        <td>625. Juni 4. Rennen</td>
       </tr>
       <tr>
         <td>Juli</td>
-        <td>7. Juli</td>
+        <td>6. Juli</td>
         <td></td>
       </tr>
       <tr>
         <td>August</td>
-        <td>4. August</td>
-        <td>28. August 4. Rennen</td>
+        <td>3. August</td>
+        <td>5. August EMC Sommerfest</td>
       </tr>
       <tr>
         <td>September</td>
-        <td>1. September</td>
-        <td>10. September 50-Jahrfeier<br>
-            18. September 5. Rennen</td>
+        <td>7. September</td>
+        <td>17. September 5. Rennen</td>
       </tr>
       <tr>
         <td>Oktober</td>
-        <td>6. Oktober</td>
+        <td>5. Oktober</td>
         <td></td>
       </tr>
       <tr>
         <td>November</td>
-        <td>4. November</td>
+        <td>2. November</td>
         <td>-</td>
       </tr>
       <tr>
         <td>Dezember</td>
-        <td>1. Dezember (Jahreshauptversammlung)<br>
-            12. Dezember (Weihnachtsfeier)</td>
+        <td>7. Dezember (Jahreshauptversammlung)<br>
+            10. Dezember (Weihnachtsfeier)</td>
         <td>-</td>
       </tr>
     </tbody>
