--- a/intern.html
+++ b/intern.html
@@ -2,7 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
-<img src="img/intern/emc_vers_12_22_1.jpg" alt="Protokoll 12.2022_1">
+<img src="img/intern/emc_vers_12.22_1.jpg" alt="Protokoll 12.2022_1">
 <img src="img/intern/emc_vers_12.22_2.jpg" alt="Protokoll 12.2022_2">
 <img src="img/intern/emc_vers_09.22.jpg" alt="Protokoll 09.2022">
 <img src="img/intern/emc_vers_08.22.jpg" alt="Protokoll 08.2022">
