--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 
 <!--                         Das Jahr 2022                                -->
 <!-------------------------------------------------------------------------->
+<h2 align="center">Das Jahr 2023</h2>
+
+<p align="center"><font color="#FF0000"><b>
+In der Versammlung im März wurden die (vorläufigen) Termine für des Jahr 2023
+abgestimmt (siehe hierzu Terminseite).
+Wir freun uns auf das traditionelle 1. Rennen am Ostermontag und hoffen auf
+gutes Wetter und rege Beteiligung auf unsererKartbahn.
+</b></font></p>
+
+
 <h2 align="center">Das Jahr 2022</h2>
 
 <h3 align="center">5. Lauf um den Jahrespokal des EMC am 18. September 2022</h3>
