--- a/index.html
+++ b/index.html
@@ -6,13 +6,53 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 
 <!--                         Das Jahr 2022                                -->
 <!-------------------------------------------------------------------------->
+<h3 align="center">1. Lauf um den Jahrespokal des EMC am 10. April 2023</h3>
+<p align="justify">
+  Die Rennsaison des EMC wurde planmäßig mit dem 1. Lauf am Ostermontag
+  gestartetn. Leider waren nur wenige Fahrer mit ihren Fahrzeugen zum Start
+  angetreten. In der Goggo-Klasse gingen 5 Fahrer und in der Kartklasse 3 Fahrer
+  an den Start.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Hubert Volks vor Christoph Markfort 2 Siege
+  einfahren. Die weiteren Plätze belegten Frank Langenhorst, Andreas Pundmann
+  und Tobias Hegemann.
+</p>
+<p align="justify">
+  In der Kartklasse war Benjamin Schneider vor VictorRoh erfolgreich, den
+  3. Platz belegte Mario Primas.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2023.04.10_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2023.04.10_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Christoph Markfort</li>
+   		<li>3. Frank Langenhorst</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Mario Primas</li>
+      <li>4.</li>
+   </ul>
+</div>
+
+
 <h2 align="center">Das Jahr 2023</h2>
 
 <p align="center"><font color="#FF0000"><b>
 In der Versammlung im März wurden die (vorläufigen) Termine für des Jahr 2023
 abgestimmt (siehe hierzu Terminseite).
 Wir freun uns auf das traditionelle 1. Rennen am Ostermontag und hoffen auf
-gutes Wetter und rege Beteiligung auf unsererKartbahn.
+gutes Wetter und rege Beteiligung auf unserer Kartbahn.
 </b></font></p>
 
 
