--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 10. April 2023</h3>
 <p align="justify">
   Die Rennsaison des EMC wurde planmäßig mit dem 1. Lauf am Ostermontag
-  gestartetn. Leider waren nur wenige Fahrer mit ihren Fahrzeugen zum Start
+  gestartet. Leider waren nur wenige Fahrer mit ihren Fahrzeugen zum Start
   angetreten. In der Goggo-Klasse gingen 5 Fahrer und in der Kartklasse 3 Fahrer
   an den Start.
 </p>
@@ -21,7 +21,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   und Tobias Hegemann.
 </p>
 <p align="justify">
-  In der Kartklasse war Benjamin Schneider vor VictorRoh erfolgreich, den
+  In der Kartklasse war Benjamin Schneider vor Victor Roh erfolgreich, den
   3. Platz belegte Mario Primas.
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
