--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_05.23.jpg" alt="Protokoll 05.2023">
 <img src="img/intern/emc_vers_04.23.jpg" alt="Protokoll 04.2023">
 <img src="img/intern/emc_vers_12.22_1.jpg" alt="Protokoll 12.2022_1">
 <img src="img/intern/emc_vers_12.22_2.jpg" alt="Protokoll 12.2022_2">
