--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2023</h2>
 
+<h3 align="center">2. Lauf um den Jahrespokal des EMC am 7. Mai 2023</h3>
+<p align="justify">
+  Beim 2. Lauf in diesem Jahr waren nur wenige Fahrer zum Start angetreten.
+  In der Goggo-Klasse gingen 5 Fahrer und in der Kartklasse nur 2 Fahrer
+  an den Start. In der Kart-Klasse waren vor dem rennen zwei Fahrzeuge durch
+  technischen Defekt ausgefallen.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Hubert Volks 2 Siege einfahren. Die weiteren Plätze
+  belegten Frank Langenhorst, Christoph Markfort und Andreas Pundmann
+  und Tobias Hegemann.
+</p>
+<p align="justify">
+  In der Kartklasse war Benjamin Schneider vor Christian Kelwing erfolgreich.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2023.05.07_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2023.05.07_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Frank Langenhorst</li>
+   		<li>3. Christoph Markfort</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Christian Kelwing</li>
+      <li></li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 10. April 2023</h3>
 <p align="justify">
   Die Rennsaison des EMC wurde planmäßig mit dem 1. Lauf am Ostermontag
